<resources>
    <string name="app_name">Bengkel Sampah</string>
    <string name="profile_name" translatable="false">Generasi Gigih 3.0</string>
    <string name="profile_email" translatable="false">generasigigih@mail.com</string>
    <string name="Edit_Account">Edit Akun</string>
    <string name="Log_Out">Keluar</string>
    <string name="profile_phonenumber" translatable="false">+62 123 456 789</string>
    <string name="privacy_policy">Ketentuan dan Privasi</string>
    <string name="help_center">Pusat Bantuan</string>
    <string name="name_edit">Nama</string>
    <string name="phonenumber_edit">Nomor HP</string>
    <string name="title_name_edit">Nama*</string>
    <string name="title_email_edit">Email*</string>
    <string name="title_phonenumber_edit">Nomor HP*</string>
    <string name="title_helpcenter">Pusat Bantuan</string>
    <string name="body_helpcenter">Kami ingin memberitahukan bahwa saat ini kami lebih memilih menerima dan menangani pertanyaan serta permintaan melalui layanan WhatsApp kami. Kami percaya bahwa ini akan membantu kami memberikan dukungan yang lebih efisien dan responsif kepada pelanggan kami.</string>
    <string name="whatsapp_button">Hubungi Kami Melalui WhatsApp</string>
    <string name="save_edited_button_profile">Simpan</string>
    <string name="name">Nama</string>
    <string name="name_hint">Masukkan nama lengkap kamu …</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="phone_number_hint">Masukkan nomor telepon kamu …</string>
    <string name="password">Kata Sandi</string>
    <string name="password_hint">Masukkan kata sandi kamu …</string>
    <string name="loading" translatable="false">Loading</string>
    <string name="description_login">Silahkan masuk untuk melanjutkan</string>
    <string name="login">Masuk</string>
    <string name="forgot_password">Lupa kata sandi</string>
    <string name="login_successful">Login Successful</string>
    <string name="login_failed" translatable="false">Login Failed</string>
    <string name="all_login_field_must_be_filled" translatable="false">Phone number and password can\'t be empty!</string>
    <string name="description_register" translatable="false">Silahkan daftar terlebih dahulu jika belum mempunyai akun</string>
    <string name="register" translatable="false">Daftar</string>
    <string name="dont_have_account_yet" translatable="false">Belum punya akun?</string>
    <string name="register_successful" translatable="false">Register Successful</string>
    <string name="register_failed" translatable="false">Register Failed</string>
    <string name="all_register_field_must_be_filled" translatable="false">Name, phone number, and password can\'t be empty!</string>
    <string name="description_forgot_password" translatable="false">Silahkan masukkan nomor telepon kamu untuk mereset kata sandi</string>
    <string name="reset_password" translatable="false">Kirim link reset kata sandi</string>
    <string name="reset_password_successful" translatable="false">Link reset kata sandi telah dikirimkan melalui sms</string>
    <string name="all_forgot_password_field_must_be_filled" translatable="false">Nomor telepon harus diisi!</string>
    <string name="form_order">Form Order</string>
    <string name="pick_up_address_fo">Alamat Penjemputan</string>
    <string name="enter_pick_up_address_fo">Masukkan alamat penjemputan</string>
    <string name="pick_up_address_desc_fo">Deskripsi (Opsional)</string>
    <string name="change_agent_fo">Ganti Agen</string>
    <string name="agent_note_fo">Agen bisa menjemput sampah sewaktu waktu, dikarenakan jumlah armada yang kurang!</string>
    <string name="waste_total_fo">Total Sampah</string>
    <string name="add_waste_fo">Tambah Sampah</string>
    <string name="waste_price_unit">Harga Satuan</string>
    <string name="payment_method_fo">Metode Pembayaran</string>
    <string name="cash">Cash</string>
    <string name="request_pick_up_fo">Ajukan Penjumputan</string>
    <string name="address_error">Alamat tidak boleh kosong</string>
    <string name="request_pick_up_success">Berhasil diajukan penjemputan</string>
    <string name="all_status" translatable="false">All Status</string>
    <string name="waiting_confirmation_status" translatable="false">Wait Confirmation</string>
    <string name="in_process_status" translatable="false">Processed</string>
    <string name="finished_status" translatable="false">Done</string>
    <string name="canceled_status" translatable="false">Cancelled</string>
    <string name="pick_up_date" translatable="false">Tanggal Penjemputan :</string>
    <string name="pick_up_address" translatable="false">Alamat Penjemputan :</string>
    <string name="pick_up_detail" translatable="false">Detail Penjemputan : </string>
    <string name="cancel_order" translatable="false">Batalkan Pesanan</string>
    <string name="bengkel_sampah_agent" translatable="false">Agen Bengkel Sampah : </string>
    <string name="agent_phone" translatable="false">Nomor Agen : %s</string>
    <string name="waste_type" translatable="false">Jenis Sampah</string>
    <string name="total_detail_history" translatable="false">Total : %s</string>
    <string name="description" translatable="false">Deskripsi :</string>
    <string name="multiplication" translatable="false">x</string>
    <string name="download_transaction_file" translatable="false">Unduh File Transaksi</string>
    <string name="filter" translatable="false">Filter</string>
    <string name="reset" translatable="false">Reset</string>
    <string name="total" translatable="false">+ Rp %d</string>
    <string name="cancel_order_confirmation" translatable="false">Apakah anda yakin untuk membatalkan pesanan ini?</string>
    <string name="order_cancelled" translatable="false">Pesanan anda telah berhasil dibatalkan</string>
    <string name="transaction_downloaded" translatable="false">Transaksi berhasil disimpan</string>
    <string name="transaction_download_failed" translatable="false">Trasanksi gagal disimpan</string>
    <string name="idr" translatable="false">Rp %d</string>
    <string name="history_empty" translatable="false">Tidak Ada Riwayat Transaksi</string>
    <string name="date" translatable="false">1 Oktober 2023</string>
    <string name="agent_name" translatable="false">Nama Agen</string>
    <string name="agent_address" translatable="false">Alamat Agen</string>
    <string name="waste_name" translatable="false">Nama Sampah</string>
    <string name="waste_amount" translatable="false">25</string>
    <string name="waste_unit" translatable="false">kg</string>
    <string name="waste_price" translatable="false">1000</string>
    <string name="add" translatable="false">Tambah</string>
    <string name="minus" translatable="false">Kurang</string>
    <string name="add_to_box" translatable="false">Masukkan ke Kotak</string>
    <string name="remove_from_box" translatable="false">Hapus dari Kotak</string>
    <string name="add_from_my_box" translatable="false">Dari Kotakku</string>
    <string name="waste_box_empty" translatable="false">Kotak keranjang kosong.\nIsi kembali untuk dapat melanjutkan</string>
    <string name="waste_sold_estimation" translatable="false">Estimasi Penjualan</string>
    <string name="weight" translatable="false">Berat</string>
    <string name="weight_estimation" translatable="false">Estimasi berat/kg</string>
    <string name="price" translatable="false">Harga</string>
    <string name="price_value" translatable="false">Rp %d</string>
    <string name="price_per_unit_value" translatable="false">\@%s/%s</string>
    <string name="finish" translatable="false">Selesai</string>
    <string name="add_waste_page" translatable="false">Tambah Sampah</string>
    <string name="search" translatable="false">Cari Sampah</string>
    <string name="waste_box" translatable="false">Kotak sampah</string>
    <string name="dialog_add_waste_title" translatable="false">Tambahkan Sampah Anda</string>
    <string name="initial_weight" translatable="false">0.0</string>
    <string name="waste_weight" translatable="false">%.1f %s</string>
    <string name="weight_error" translatable="false">Berat tidak boleh kosong</string>
    <string name="home" translatable="false">Home</string>
    <string name="history" translatable="false">Riwayat</string>
    <string name="account" translatable="false">Akun</string>
    <string name="history_detail" translatable="false">Detail Penjemputan</string>
    <string name="cart" translatable="false">Keranjang</string>
    <string name="money_bag" translatable="false">Money Bag</string>
    <string name="profile" translatable="false">Profil</string>
    <string name="title_activity_bank_sampah" translatable="false">BankSampahActivity</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
</resources>