<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/menu_history"
        android:enabled="true"
        android:icon="@drawable/ic_history"
        android:title="@string/history" />

    <item
        android:id="@+id/menu_cart"
        android:enabled="true"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart" />

    <item
        android:id="@+id/menu_money_bag"
        android:enabled="true"
        android:icon="@drawable/ic_money_bag"
        android:title="@string/money_bag" />

    <item
        android:id="@+id/menu_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>