<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_add_waste_title"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_close_dialog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_close_dialog"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:scaleX="0.7"
            android:scaleY="0.7"
            app:backgroundTint="@android:color/holo_red_light"
            app:icon="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/waste_type" />

    <TextView
        android:id="@+id/tv_dialog_waste_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        tools:text="@string/waste_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/weight_estimation" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_dialog_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:checkable="false"
            android:contentDescription="@string/minus"
            app:chipBackgroundColor="@color/md_theme_light_primary"
            app:chipEndPadding="2dp"
            app:chipIcon="@drawable/ic_minus_white"
            app:chipMinHeight="24dp"
            app:chipMinTouchTargetSize="0dp"
            app:chipStartPadding="2dp"
            app:chipStrokeColor="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:textEndPadding="0dp"
            app:textStartPadding="0dp" />

        <EditText
            android:id="@+id/ed_dialog_waste_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginStart="8dp"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="@+id/chip_dialog_minus"
            app:layout_constraintStart_toEndOf="@+id/chip_dialog_minus"
            app:layout_constraintTop_toTopOf="@+id/chip_dialog_minus"
            tools:text="@string/waste_amount" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_dialog_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:checkable="false"
            android:contentDescription="@string/add"
            app:chipBackgroundColor="@color/md_theme_light_primary"
            app:chipEndPadding="2dp"
            app:chipIcon="@drawable/ic_add_white"
            app:chipMinHeight="24dp"
            app:chipMinTouchTargetSize="0dp"
            app:chipStartPadding="2dp"
            app:chipStrokeColor="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ed_dialog_waste_weight"
            app:layout_constraintTop_toTopOf="parent"
            app:textEndPadding="0dp"
            app:textStartPadding="0dp" />

        <TextView
            android:id="@+id/tv_dialog_price_per_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/price_per_unit_value" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_dialog_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/add_to_box"
        app:cornerRadius="12dp" />
</androidx.appcompat.widget.LinearLayoutCompat>